# ivrit_agent

./: .env.example  .gitignore  CLAUDE.md  README.md  client_example.py  pyproject.toml
.claude/: team.md
.claude/agents/: architect.md  backend-specialist.md  data-ml-engineer.md  devops.md  documenter.md  frontend-specialist.md  implementer.md  planner.md  qa-engineer.md  researcher.md  reviewer.md  security-reviewer.md
.claude/commands/: sprint-close.md  sprint-resume.md  sprint-status.md
.claude/scripts/: board.py  sprint-board.template.html  team_setup.py
app/: __init__.py  chat.py  config.py  main.py  schemas.py  transcription.py
app/static/: index.html
fixes/: 2026-06-02_config-test-env-isolation.md  2026-06-03_fail-fast-at-startup-if-ffmpeg-is-missing.md  2026-06-03_pyannote-vad-weights-only-load.md
mcp_code/: README.md  server.py
resource/: README.md  main.py
sprints/2026-05-31_fastapi-audio-transcribe-diarization/: plan.md
sprints/2026-05-31_fastmcp-transcribe-mcp/: plan.md
sprints/2026-05-31_hebrew-transcript-vocab-skill/: plan.md
sprints/2026-06-02_audio-playback-edit-speaker-label/: plan.md
sprints/2026-06-02_offline-audio-upload-hebrew-website/: plan.md
sprints/2026-06-02_ui-theme-record-rename-md-export/: plan.md
sprints/2026-06-03_record-mic-plus-computer-audio/: plan.md
tests/: test_chat.py  test_client_example.py  test_config.py  test_main.py  test_mcp_server.py  test_render_transcript.py  test_schemas.py  test_transcription.py  test_vocab.py  test_web.py  test_web_features.py  test_web_offline.py
(+72 files in other folders)
