[project]
name = "ivrit-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torchaudio==2.8.0",
    "whisperx==3.8.6",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pydantic-settings",
    "requests",
    "fastmcp",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx",
]
